syntax = "proto3";

package singerpb;

option csharp_namespace = "SingerApi";

import "google/protobuf/timestamp.proto";

service SingerService {
    rpc GetSingerById (SingerByIdRequest) returns (SingerResponse);
    rpc CreateSingers (stream CreateSingerRequest) returns (CreateSingerResponse);
}


message CreateSingerRequest {
    string name = 1;
    int32 debut_year = 2;
}

message CreateSingerResponse {
    int32 success_count = 1;
    repeated SingerResponse singers = 2;
}

message SingerByIdRequest {
    string id = 1;
}

message SingerResponse {
    string id = 1;
    string name = 2;
    int32 debut_year = 3;
    google.protobuf.Timestamp created_at = 5;
}
